--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "devDependencies": {
     "eslint": "^9.6.0",
     "standard": "^17.1.0"
+  },
+  "scripts": {
+    "lint:js": "npx standard 'index.js'"
   }
 }
