--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,29 @@
----
-name: "Lint Code Base"
+name: Lint Code Base
 
 on:
   push:
     branches:
-      - develop
+      - main
   pull_request:
     branches:
-      - develop
+      - main
 
 jobs:
   lint:
-    name: "Lint Code Base"
+    name: Lint Code Base
     runs-on: ubuntu-latest
 
     steps:
-      - name: "Checkout Code"
+      - name: Checkout Code
         uses: actions/checkout@v2
 
-      - name: "Run Linter"
-        uses: github/super-linter@v4
-        env:
-          VALIDATE_ALL_CODEBASE: false
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run Standard Linter
+        run: npx standard
