--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -27,3 +27,16 @@ jobs:
 
       - name: Run Standard Linter
         run: npx standard
+
+      - name: Run Standard Linter with Fix
+        if: failure()
+        run: npx standard --fix
+
+      - name: Commit changes
+        if: success() || failure()
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "Auto-fix lint errors" || echo "No changes to commit"
+          git push || echo "No changes to push"
