--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "type": "module",
   "devDependencies": {
-    "eslint": "^9.6.0",
-    "standard": "^17.1.0"
+    "eslint": "^8.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.1"
   },
   "scripts": {
-    "lint": "standard",
-    "lint:fix": "standard --fix"
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix"
   }
 }
