new conf linter.yml

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -2,9 +2,9 @@ name: Lint Code Base
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "develop" ]
+    branches: [ "main" ]
 
 jobs:
   run-lint:
@@ -21,7 +21,7 @@ jobs:
           node-version: '16'
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Run ESLint
         run: npm run lint
