--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "type": "module",
   "devDependencies": {
-    "eslint": "^8.0.0",
+    "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^17.9.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.1"
+    "eslint-plugin-promise": "^5.2.0"
   },
   "scripts": {
     "lint": "eslint . --ext .js",
