--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -32,17 +32,10 @@ jobs:
         run: npm run lint:fix
 
       - name: Commit changes
-        if: failure()
+        if: always()
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "Auto-fix lint errors" || echo "No changes to commit"
           git push || echo "No changes to push"
-
-      - name: Lint Code Base
-        uses: github/super-linter@v4
-        env:
-          VALIDATE_ALL_CODEBASE: false
-          DEFAULT_BRANCH: "main"
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
