Set up ESLint with GitHub Actions and super-linter q

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm run lint:fix
 
       - name: Commit changes
-        if: always()
+        if: failure()
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
